// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalInput component matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="css-1p58xje"
  >
    <p>
      Username
    </p>
    <input
      placeholder="Type here..."
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`ModalInput component matches snapshot with updated state 1`] = `
<DocumentFragment>
  <div
    class="css-1p58xje"
  >
    <p>
      Username
    </p>
    <input
      placeholder="Type here..."
      type="text"
      value="test"
    />
  </div>
</DocumentFragment>
`;
